--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,44 +54,34 @@
         app:layout_constraintTop_toBottomOf="@id/btnStop" />
 
     <TextView
-        android:id="@+id/txtReps"
+        android:id="@+id/activityExercise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="68dp"
-        android:text="Reps: 0"
+        android:text="Activity: None"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/summaryLabel" />
 
     <TextView
-        android:id="@+id/txtSpeed"
+        android:id="@+id/currentAcceleration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:text="Speed: 0 m/s"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtReps" />
+        app:layout_constraintTop_toBottomOf="@id/activityExercise" />
 
     <TextView
         android:id="@+id/txtJumpHeight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:text="Jump Height: 0 m"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtSpeed" />
-
-    <TextView
-        android:id="@+id/currentAcceleration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="8dp"
-        android:text="Current Speed: 0 m/s"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtJumpHeight" />
+        app:layout_constraintTop_toBottomOf="@+id/stepCounter" />
 
     <TextView
         android:id="@+id/stepCounter"
@@ -104,13 +94,13 @@
         app:layout_constraintTop_toBottomOf="@+id/currentAcceleration" />
 
     <TextView
-        android:id="@+id/activityExercise"
+        android:id="@+id/txtJumpCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:text="Activity: None"
+        android:layout_marginTop="9dp"
+        android:text="Jump Count: 0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/stepCounter" />
+        app:layout_constraintTop_toBottomOf="@+id/txtJumpHeight" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
